exports[`default export is a function block returning JSX 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function App() {
  var message = \'Hello!\';

  return _react2.default.createElement(
    \'h1\',
    null,
    message
  );
};

App.displayName = \'App\';"
`;

exports[`ignores default function block when no return statement 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

exports.default = function () {
  // Do some stuff, but don\'t return anything.
  var message = \'Hello!\';
  var answer = 42;
};"
`;

exports[`ignores default function block when not returning JSX 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

exports.default = function () {
  return new Promise(function (resolve) {
    window.addEventListener(\'scroll\', function () {
      resolve(window.scroll);
    });
  });
};"
`;

exports[`ignores default function block when not returning JSX 2`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function () {
  var message = \'Hello!\';

  return message;
};"
`;

exports[`ignores default function when not returning JSX 1`] = `
"\"use strict\";

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

exports.default = function () {
  return 42;
};"
`;

exports[`ignores displayName when if/else block has no return statement 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function (_ref) {
  var renderA = _ref.renderA,
      renderB = _ref.renderB;

  var loading = true;

  if (loading) renderA();else {
    renderB();
  }
};"
`;

exports[`ignores when displayName is already set on default export function 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function App() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

// We know this will become App from the filename


App.displayName = \'App\';"
`;

exports[`ignores when displayName is already set on function 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = function HelloWorld() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

HelloWorld.displayName = \'HelloWorld\';

exports.default = HelloWorld;"
`;

exports[`ignores when jsx is assigned to a variable and not a component/function 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = _react2.default.createElement(
  \'h1\',
  null,
  \'Hello!\'
);

exports.default = HelloWorld;"
`;

exports[`sets default export from folder name when index.js 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function exportDefaultFromIndexjs() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

exportDefaultFromIndexjs.displayName = \'exportDefaultFromIndexjs\';"
`;

exports[`sets default export function name with deeply nested JSX return statement 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function App() {
  if (true) {
    if (true) {
      if (true) {
        if (true) {
          return _react2.default.createElement(
            \'h1\',
            null,
            \'Hello!\'
          );
        }
      }
    }
  }
};

App.displayName = \'App\';"
`;

exports[`sets displayName for assigned functional component 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = function HelloWorld() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

HelloWorld.displayName = \'HelloWorld\';
exports.default = HelloWorld;"
`;

exports[`sets displayName for assigned functional component with block 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = function HelloWorld() {
  var message = \'Hello!\';

  return _react2.default.createElement(
    \'h1\',
    null,
    message
  );
};

HelloWorld.displayName = \'HelloWorld\';
exports.default = HelloWorld;"
`;

exports[`sets displayName for assignment default export 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var App = function App() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

App.displayName = \'App\';
exports.default = App;"
`;

exports[`sets displayName for named export functional component 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});
exports.HelloWorld = undefined;

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = exports.HelloWorld = function HelloWorld() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};
HelloWorld.displayName = \'HelloWorld\';"
`;

exports[`sets displayName for named export functional component with block 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});
exports.HelloWorld = undefined;

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

var HelloWorld = exports.HelloWorld = function HelloWorld() {
  var message = \'Hello!\';

  return _react2.default.createElement(
    \'h1\',
    null,
    message
  );
};
HelloWorld.displayName = \'HelloWorld\';"
`;

exports[`sets displayName when if/else block returns JSX 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function App() {
  var loading = true;

  if (loading) {
    return _react2.default.createElement(
      \'h1\',
      null,
      \'Loading...\'
    );
  } else {
    return _react2.default.createElement(
      \'h1\',
      null,
      \'Hello!\'
    );
  }
};

App.displayName = \'App\';"
`;

exports[`sets displayName when if/else returns JSX 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function App() {
  var loading = true;

  if (loading) return _react2.default.createElement(
    \'h1\',
    null,
    \'Loading...\'
  );else return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

App.displayName = \'App\';"
`;

exports[`sets function name for default export based on filename 1`] = `
"\'use strict\';

Object.defineProperty(exports, \"__esModule\", {
  value: true
});

var _react = require(\'react\');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function App() {
  return _react2.default.createElement(
    \'h1\',
    null,
    \'Hello!\'
  );
};

App.displayName = \'App\';"
`;

exports[`works when default export is a function block returning JSX 1`] = `
"'use strict';

Object.defineProperty(exports, "__esModule", {
  value: true
});

var _react = require('react');

var _react2 = _interopRequireDefault(_react);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

exports.default = function App() {
  var message = 'Hello!';

  return _react2.default.createElement(
    'h1',
    null,
    message
  );
};"
`;

exports[`works with preact 1`] = `
"'use strict';

Object.defineProperty(exports, "__esModule", {
  value: true
});

var _Header = require('./Header');

var _Header2 = _interopRequireDefault(_Header);

var _preact = require('preact');

var _preact2 = _interopRequireDefault(_preact);

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

/** @jsx preact.h */

var App = function App() {
  return _preact2.default.h(
    'main',
    null,
    _preact2.default.h(_Header2.default, { title: 'Hello!' }),
    _preact2.default.h(
      'h2',
      null,
      'World!'
    )
  );
};

exports.default = App;"
`;
